[package]
name = "cmd_cache"
version = "0.1.0"
authors = ["Benoît Dejean <bdejean@gmail.com>", "Cyprien Le Pannérer <cyplp@free.fr>"]
license = "GPL-3.0"
repository = "https://github.com/bdejean/cmd_cache"
readme = "README.md"
description = "A command line tool that runs a command and caches its output."

[dependencies]

rust-crypto = ">=0.2.36"

tempfile = ">=3.1.0"

chrono = ">=0.4.11"

[dev-dependencies]
rand = ">=0.7.3"

